# cpp-docker-debug-environment

./: .gitignore  LICENSE  README.md  TEST_RUNNER_README.md  run-tests.ps1  run-tests.sh
.kiro/specs/cpp-docker-debug-environment/: design.md  requirements.md  tasks.md
templates/: .dockerignore  BEST_PRACTICES.md  DEBUG_CONFIGURATION.md  DEVCONTAINER.md  DEVCONTAINER_REQUIREMENTS.md  DOCKERFILE_BEST_PRACTICES.md  PERFORMANCE.md  QUICK_START_GUIDE.md  README.md  REQUIREMENTS.md  TROUBLESHOOTING.md  VSCODE_TASKS.md  templates.json
templates/basic-cpp/: CMakeLists.txt  README.md
templates/basic-cpp/.devcontainer/: Dockerfile  devcontainer.json
templates/basic-cpp/scripts/: README.md  import-debug-config.ps1  import-debug-config.sh
templates/basic-cpp/src/: main.cpp
templates/build-scripts/: README.md  benchmark.ps1  fast-build.ps1  fast-build.sh
templates/calculator-cpp/: CMakeLists.txt  README.md
templates/calculator-cpp/.devcontainer/: Dockerfile  devcontainer.json
templates/calculator-cpp/include/: calculator.h
templates/calculator-cpp/src/: calculator.cpp  main.cpp
templates/embedded-arm/: CMakeLists.txt  DEVELOPMENT_SUMMARY.md  EMBEDDED_DEVELOPMENT_GUIDE.md  EXECUTION_ENVIRONMENTS.md  README.md  docker-compose.yml
templates/embedded-arm/.devcontainer/: Dockerfile  devcontainer.json
templates/embedded-arm/archive/semihosting-tests/: README.md
templates/embedded-arm/docker/: renode.Dockerfile
templates/embedded-arm/hal-simulator/: hal_simulator.py
templates/embedded-arm/include/: gpio.h  led.h  system_init.h
templates/embedded-arm/linker/: STM32F407VGTx_FLASH.ld
templates/embedded-arm/renode-config/: stm32f407.resc
templates/embedded-arm/scripts/: README.md  archive_scripts.sh  build-test.sh  check-renode-docs.sh  debug-qemu.sh  debug-semihosting-issue.sh  install-renode.sh  move_remaining_archives.sh  quick-build-test.sh  test-all-tasks.sh  test-alternative-machines.sh  test-alternative-outputs.sh  test-bare-metal-qemu.sh  test-basic-qemu.sh  test-cortex-m-semihost.sh  test-debug-qemu.sh  test-fixed-qemu.sh  test-gdb-debugging.sh  test-googletest-setup.sh  test-in-basic-container.sh  test-in-qemu.sh  test-led-visual.sh  test-minimal-semihost.sh  test-practical-system.sh  test-qemu-verbose.sh  test-renode-correct.sh  test-renode-simple.sh  test-renode-verbose.sh  test-renode.sh  test-simple-googletest.sh  test-simple-working.sh  test-uart-functionality.sh  test-uart-output.sh  test-unity-sample.sh  try-official-renode-docker.sh
templates/embedded-arm/scripts/archive/: .gitkeep  ARCHIVE_INFO.md  test-alternative-outputs.sh  test-official-semihost.sh  test-uart-output.sh  test-ultra-simple-semihost.sh
templates/embedded-arm/src/: main.c  main.elf
templates/embedded-arm/src/drivers/: led.c
templates/embedded-arm/src/hal/: gpio.c  system_init.c
templates/embedded-arm/src/startup/: startup_stm32f4xx.s
templates/embedded-arm/tests/: CMakeLists.txt  CMakeLists_minimal.txt  README.md  simple_test.cpp
templates/embedded-arm/tests/fixtures/: hardware_fixtures.cpp  hardware_fixtures.h
templates/embedded-arm/tests/integration/: CMakeLists.txt  CMakeLists_simplified.txt  arm_official.ld  bare_metal_test.c  cortex_m_semihost_test.c  debug_qemu_test.c  debug_test_program.c  fixed_qemu_test.c  improved_qemu_test.c  integration_test_main.c  minimal.ld  minimal_qemu_test.c  minimal_semihost_test.c  no_semihost_test.c  official_semihost_sample.c  practical_embedded_system.c  renode_test.c  simple_led_test.c  simple_official_sample.c  simple_qemu_test.c  simple_working_test.c  test_hardware_integration.c  test_qemu_semihosting.c  uart_output_test.c  ultra_simple_semihost.c  working_qemu_test.c  working_semihost_alternative.c
templates/embedded-arm/tests/integration_native/: test_peripheral_coordination.cpp  test_state_machine.cpp  test_system_integration.cpp
templates/embedded-arm/tests/mocks/: mock_gpio.c  mock_hal.c  mock_hal.h  mock_led.c  mock_system.c
templates/embedded-arm/tests/performance/: test_memory_usage.cpp  test_timing_accuracy.cpp
templates/embedded-arm/tests/unit/: test_gpio_abstraction.cpp  test_led_logic.cpp  test_main_logic.cpp  test_system_logic.cpp
templates/embedded-arm/tests/unity_sample/: CMakeLists.txt  README.md  test_build.sh
templates/embedded-arm/tests/unity_sample/mocks/: mock_gpio.c  mock_gpio.h
templates/embedded-arm/tests/unity_sample/src/: test_led_unity.c  test_runner.c  unity_config.h
templates/embedded-arm/tests/utils/: embedded_test_framework.cpp  embedded_test_framework.h  test_helpers.cpp  test_helpers.h
templates/embedded-esp32/: .gitignore  API_SPECIFICATION.md  CMakeLists.txt  CMakeLists_simple.txt  DEVELOPMENT_SUMMARY.md  ESP32_WIFI_GUIDE.md  README.md  SETUP_GUIDE.md  platformio.ini  sdkconfig.defaults  sdkconfig.minimal
templates/embedded-esp32/.devcontainer/: Dockerfile  Dockerfile_arduino  devcontainer.json  post-create.sh
templates/embedded-esp32/config/: wifi_config.ini
templates/embedded-esp32/include/: config_loader.h  secrets.h.example
templates/embedded-esp32/main/: CMakeLists.txt  led_controller.c  main.c  sensor_reader.c  simple_main.c  web_server.c  wifi_manager.c
templates/embedded-esp32/simple_main/: CMakeLists.txt  simple_main.c
templates/embedded-esp32/src/: main.cpp
templates/json-parser-cpp/: CMakeLists.txt  README.md
templates/json-parser-cpp/.devcontainer/: Dockerfile  devcontainer.json
templates/json-parser-cpp/data/: sample.json
templates/json-parser-cpp/src/: main.cpp
templates/monitoring/: container-health-check.sh
templates/validation/: TASK_VALIDATION.md  breakpoint-test.cpp  debug-test.ps1  devcontainer-test.ps1  docker-test.sh  environment-validation.ps1  environment-validation.sh  error-test.cpp  intellisense-test.cpp  regression-test.ps1  simple-test.ps1  test-basic.ps1  validate-tasks.ps1  validate-tasks.sh
templates/validation/test-results/: CI_CD_COMPATIBILITY_REPORT.md  DOCKER_ENVIRONMENT_TEST_REPORT.md  debug-test-report.txt  (+8 more)
test-results/: environment.txt  quick-test-summary.txt  regression-test-summary.txt  test-summary.txt
(+4 files in other folders)
